--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -8,6 +8,10 @@
   position: relative;
 }
 
+.cell.selected::before {
+  border: 3px solid lightgreen;
+}
+
 .cell::before {
   content: "";
   position: absolute;
