--- a/src/components/Character/Character.css
+++ b/src/components/Character/Character.css
@@ -3,8 +3,16 @@
   border-radius: 50%;
   width: 20px;
   height: 20px;
-  background-color: lightgreen;
+  background-color: lightgray;
   translate: -50% -50%;
   z-index: 10;
   transition: 0.2s;
+}
+
+.character.player {
+  background-color: lightgreen;
+}
+
+.character.enemy {
+  background-color: red;
 }
