Add basic obstacles that block player/enemy movement

--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -21,3 +21,13 @@
   bottom: 5%;
   background-color: black;
 }
+
+.rock::before {
+  content: "";
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  background-color: brown;
+}
