--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,23 @@
   position: relative;
   margin: auto;
 }
+
+.fill-container {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.pixelate {
+  image-rendering: pixelated;
+}
+
+.no-click {
+  pointer-events: none;
+}
+
+.stretch-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
