--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -8,28 +8,12 @@
   position: relative;
 }
 
-.cell.selected::before {
+.select-frame {
   border: 3px solid lightgreen;
 }
 
-.cell::before {
-  content: "";
-  position: absolute;
-  left: 5%;
-  right: 5%;
-  top: 5%;
-  bottom: 5%;
-  background-color: black;
-}
-
-.rock::before {
-  content: "";
-  position: absolute;
-  left: 25%;
-  right: 25%;
-  top: 25%;
-  bottom: 25%;
-  background-color: brown;
+.cell-frame {
+  border: 1px solid black;
 }
 
 .bomb::before {
