--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(37, 37, 37);
+}
+
 .board-container {
   position: relative;
   margin: auto;
