--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,20 @@
 
 body {
   background-color: var(--color-bg);
+  margin: 0;
 }
 
 .app-container {
   margin: auto;
+  max-width: 1024px;
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
 }
 
 .board-container {
   position: relative;
+  flex: 1;
 }
 
 .fill-container {
@@ -37,4 +43,25 @@ body {
 .stretch-bg {
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.top-bar {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bottom-bar {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.input-blocker {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 50;
 }
