--- a/src/components/UI/Menus/Menus.css
+++ b/src/components/UI/Menus/Menus.css
@@ -2,21 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .menu button {
   display: block;
   padding: 15px;
+  min-width: 320px;
+  max-width: 420px;
 }
 
-.expanded-menu {
-  position: absolute;
-  top: 100%;
+.game-menu {
   z-index: 100;
-  left: 0;
-  right: 0;
-}
-
-.menu-container {
-  position: relative;
 }
