Add basic tutorial and menus to access it; add app context to open help menus from anywhere

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  position: relative;
 }
 
 .board-container {
@@ -69,4 +70,21 @@ body {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 50;
+}
+
+.window-full {
+  z-index: 200;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: var(--color-bg);
+  padding: 10px;
+}
+
+.window-x {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
